[metadata]
name = password-gen-o
version = attr: password_generator.version.__version__
author = Sujit Biswas
author_email = ssujitxx@gmail.com
description = A Python package that generates secure random passwords.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/SSujitX/password-gen-o
license = MIT
keywords = password generator, python password generator, random password generator
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.9

[options.package_data]
* = VERSION

[project_urls]
Bug Tracker = https://github.com/SSujitX/password-gen-o/issues
Documentation = https://github.com/SSujitX/password-gen-o#readme
Source Code = https://github.com/SSujitX/password-gen-o
